modify lobby/tournamentList css + html

--- a/public/css/group.css
+++ b/public/css/group.css
@@ -1,43 +1,39 @@
-.groups{
-	display: block;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-}
 .group {
 	display: inline-block;
 }
+.group-table tbody {
+    border-style: hidden;
+}
 .group-number {
-	float: left;
-	color: #474ab6;
-	font-size: 23px;
+    position: absolute;
+    color: #fff;
 }
 .group-table tr>* {
-	border: 1px solid #494bb7;
-	padding: 10px 15px;
+    border: 1px solid #6B6E70;
+    padding: 20px;
 }
 .group-table {
-	margin-top:20px;
-	background-color: #F7F7FF;
+    background-color: #474B4F;
+    margin-top: 50px;
 }
-.group-table tr>:nth-child(1) {
-	background-color: #9271f6; 
-	color: white;
-	font-size: 17px;
+.group-table th {
+    border: none;
+    border-top: 3px solid #61892F;
+    background-color: #222629;
+    color: white;
+    text-align: center;
+}
+.group-table tbody tr>:nth-child(1) {
+    background-color: #61892F;
+    color: #fff;
+    font-size: 17px;
+ }
+ .group-table tbody tr>:last-child {
+    border-right: none;
  }
 .group-table tr>:nth-child(2) {
-	padding-right: 100px; 
+    width: 250px;
  }
-.group-first-row >* {
- 	background-color: #9271f6;
- 	color: white;
- 	text-align: center;
- }
- .lastname-uppercase {
+.lastname-uppercase {
  	text-transform: uppercase;
  }
