--- a/public/css/lobby_list_styles.css
+++ b/public/css/lobby_list_styles.css
@@ -5,7 +5,7 @@ body {
 	display: inline-block;
 }
 .list-match-lobby-table {
-	display: inline-block;
+	display: table-row-group;
 	max-width: 50%;
 	margin-top: 40px;   /*  відступ зверху  */
 }
