--- a/public/css/bracket.css
+++ b/public/css/bracket.css
@@ -1,140 +1,148 @@
 /*BRACKETS*/
-section {
-	overflow: hidden;
-	margin-top: 20px;
-	font-size: 12px;
-	padding: 20px 0;
-	display: inline-block;
-}
-
-.bracket {
-	max-width: 1100px;
-	margin: 0 auto;
-
-	display: block;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
+.bracket_section {
 	display: flex;
-	-webkit-flex-direction: row;
 	flex-direction: row;
+	list-style-type: none;
+	justify-content: center;
+	font-family: 'Source Sans Pro', sans-serif;
+	padding: 0;
+	margin: 0;
+	color: white;
 }
-.youtube-logo{
-    display: block;
-	position: absolute;
-	float: left;
+.bracket_column {
+	display: flex;
+	flex-direction: column;
+	list-style-type: none;
+	margin: 20px;
 }
-.youtube-logo img {
-    height: 20px;
-    width: 20px;
+.bracket_item {
+	width: 200px;
+	display: grid;
+	grid-template-columns: 10% 13% auto 15%;
+	grid-template-rows: 25px 30px 30px 30px;
 }
-.split {
-    display: block;
-	position: absolute;
-    float: left;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-	width: 16%;
-	margin-top: 23px;
-
-    -webkit-flex-direction: row;
-	-moz-flex-direction: row;
-    flex-direction: row;
-}
-.match-number {
-	display: block;
-    position: static;
-    width: 13px;
-    padding: 5px;
-    background-color: #61892F;
-    color: #fff;
-    text-align: center;
+.match_number {
+	grid-column: 2;
+	grid-row: 1;
+	background-color: #61892F;
+	text-align: center;
+	vertical-align: middle;
+	padding-top: 5px;
+	font-size: 14px;
+	border-radius: 3px 3px 0px 0px;
 }
 
-.brackets_match_table {
-  width: 150px;
-  color: white;
-  border-collapse: collapse;
-  vertical-align: middle;
-  margin-top: -2px;
+.youtube_logo {
+	grid-column: 4;
+	grid-row: 1;
+	padding-top: 4px;
+	color: #ff0000;
+	text-align: center;
 }
-.pre_numbers01 {
-  text-align: right;
-  position: absolute;
-  left: -20px;
-  top: 32px;
+.youtube_logo img {
+	width: 20px;
+	height: 20px;
 }
-.pre_numbers02 {
-  text-align: right;
-  position: absolute;
-  left: -20px;
-  top: 60px;
+.front_01 {
+	grid-column: 1;
+	grid-row: 2;
+	padding-top: 9px;
+	text-align: center;
+	font-size: 11px;
+	font-style: italic;
 }
-.brackets_match_table tbody td {
-  font-size: 13px;
-  background-color: #474B4F;
-  padding: 6px;
+.front_02 {
+	grid-column: 1;
+	grid-row: 3;
+	padding-top: 9px;
+	text-align: center;
+	font-size: 11px;
+	font-style: italic;
 }
-.brackets_match_table tbody tr td:nth-child(2) {
-  border-left: 1px solid #6B6E70;
-  text-align: center;
+.name_01 {
+	grid-column: 2/4;
+	grid-row: 2;
+	padding-top: 7px;
+	padding-left: 7px;
+	font-size: 12px;
+	background-color: #474B4F;
+	border-bottom: solid 1px grey;
 }
-.brackets_match_table tfoot {
-  font-size: 11px;
+.name_02 {
+	grid-column: 2/4;
+	grid-row: 3;
+	padding-top: 7px;
+	padding-left: 7px;
+	font-size: 12px;
+	background-color: #474B4F;
+	border-radius: 0px 0px 0px 3px;
 }
-.brackets_match_table tbody tr:first-child {
-  border-bottom: 1px solid #6B6E70;
+.name_01,
+.name_02 {
+	text-align: left;
 }
-.fa-youtube {
-  position: absolute;
-  top: 6px;
-  padding-left: 7px;
-  font-size: 14px;
-  color: #ff0000;
+.points_01 {
+	grid-column: 4;
+	grid-row: 2;
+	padding-top: 7px;
+	text-align: center;
+	background-color: #474B4F;
+	border-bottom: solid 1px grey;
+	border-left: solid 1px grey;
+	font-size: 14px;
+	border-radius: 0px 3px 0px 0px;
 }
-.player_name {
-  overflow: hidden;
-  max-width: 140px;
-  max-height: 15px;
+.points_02 {
+	grid-column: 4;
+	grid-row: 3;
+	padding-top: 7px;
+	text-align: center;
+	background-color: #474B4F;
+	border-left: solid 1px grey;
+	font-size: 14px;
+	border-radius: 0px 0px 3px 0px;
+}
+.looser {
+	grid-column: 2/4;
+	grid-row: 4;
+	font-size: 11px;
+	font-style: italic;
+	padding-top: 3px;
 }
 
 
-.K\/O-1 .match-details, .UP-1 .match-details {
+.K\/O-1 .bracket_item, .UP-1 .bracket_item {
     padding-top: 10%;
 }
 .K\/O-1 .first-match, .UP-1 .first-match{
     padding-top: 5%;
 }
-.K\/O-2 .match-details, .UP-2 .match-details,
-.LOW-1 .match-details, .LOW-2 .match-details {
+.K\/O-2 .bracket_item, .UP-2 .bracket_item,
+.LOW-1 .bracket_item, .LOW-2 .bracket_item {
     padding-top: 76%;
 }
 .K\/O-2 .first-match, .UP-2 .first-match,
 .LOW-1 .first-match, .LOW-2 .first-match {
     padding-top: 38%;
 }
-.K\/O-3 .match-details, .UP-3 .match-details,
-.LOW-3 .match-details, .LOW-4 .match-details {
+.K\/O-3 .bracket_item, .UP-3 .bracket_item,
+.LOW-3 .bracket_item, .LOW-4 .bracket_item {
     padding-top: 210%;
 }
 .K\/O-3 .first-match, .UP-3 .first-match,
 .LOW-3 .first-match, .LOW-4 .first-match {
     padding-top: 105%;
 }
-.K\/O-4 .match-details, .UP-4 .match-details,
-.LOW-5 .match-details, .LOW-6 .match-details {
+.K\/O-4 .bracket_item, .UP-4 .bracket_item,
+.LOW-5 .bracket_item, .LOW-6 .bracket_item {
     padding-top: 460%;
 }
 .K\/O-4 .first-match, .UP-4 .first-match,
 .LOW-5 .first-match, .LOW-6 .first-match {
     padding-top: 230%;
 }
-.K\/O-5 .match-details, .UP-5 .match-details,
-.LOW-7 .match-details, .LOW-8 .match-details {
+.K\/O-5 .bracket_item, .UP-5 .bracket_item,
+.LOW-7 .bracket_item, .LOW-8 .bracket_item {
     padding-top: 900%;
 }
 .K\/O-5 .first-match, .UP-5 .first-match,
