--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,9 @@
 body {
-	font-family: Arial, sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	padding: 0;
 	margin: 0;
 	background-color: #222629;
+	color: white;
 }
 * {
     -webkit-box-sizing: border-box;
@@ -22,7 +23,7 @@ a {
     color: #fff;
     text-align: center;
 	margin: 20px 20px 20px 20px;
-	display: inline;
+	display: inline-block;
 }
 table {
     border-collapse: collapse;
