--- a/public/css/lobby_list_styles.css
+++ b/public/css/lobby_list_styles.css
@@ -1,13 +1,12 @@
 body {
-	font-family: 'Roboto', sans-serif;
-}
-.list-match-lobby {
-	display: inline-block;
+	font-family: 'Exo 2', sans-serif;
 }
 .list-match-lobby-table {
-	display: table-row-group;
+	display: flex;
+	flex-direction: column;
+	width: 50%;
 	max-width: 50%;
-	margin-top: 40px;   /*  відступ зверху  */
+	margin-top: 40px;
 }
 .list-match-lobby-info {
 	padding: 12px;
@@ -18,37 +17,52 @@ body {
 	font-weight: normal;
 	font-size: 12px;
 	border-top: 5px solid #61892F;
+	border-radius: 3px;
 }
 .list-match-lobby-frame-section tbody {
 	display: table-row-group;
 }
 .list-match-lobby-player-table {
-	display: inline-block;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 	background-color: #474B4F;
     border-bottom: 5px solid #61892F;
-    padding-top: 20px;
+	border-radius: 3px;
+    padding-top: 10px;
+	height: 280px;
+	max-height: 280px;
+	min-width: 100%;
 }
 .list-match-lobby-player {
-	padding: 10px 40px;
+	padding: 10px 20px;
 	float: left;
 	position: relative;
 	display: block;
 	box-sizing: border-box;	
 }
 .list-match-lobby-frame-section {
-	float: left;
 	position: relative;
 	display: block;
 	box-sizing: border-box;
+	margin: 0px 20px;
+	margin-top: 50px;
 }
 .list-match-lobby-player-name {
 	color: white;
-	font-size: 15px;
-
+	font-size: 17px;
 }
 .list-match-lobby-player-img {
-	max-width: 100px;
-	height: auto;
+	margin: 20px 0px 10px 0px;
+	width: 150px;
+	max-width: 150px;
+	max-height: 200px;
+}
+.float_left {
+	float: left;
+}
+.float_right {
+	float: right;
 }
 .list-match-lobby-frame-section tr th {
 	font-size: 11px;
@@ -67,10 +81,6 @@ body {
 	text-align: center;
 	padding: 5px 10px;
 	vertical-align: middle;
-}
-.list-match-lobby-frame-section {
-	padding: 0px 20px;
-	margin-top: 20px;
 }
 .list-match-lobby-frame-section table tr.list-match-lobby-frame-details td {
 	font-size: 10px;
