--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,10 +20,10 @@ a {
     margin: 0 auto;
 }
 .sub-container {
-    color: #fff;
-    text-align: center;
-	margin: 20px 20px 20px 20px;
-	display: inline-block;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 table {
     border-collapse: collapse;
@@ -37,11 +37,6 @@ table {
 	width: 100%;
 	clear: both;
 }
-
-div {
-	box-sizing: border-box;
-}
-
 .logologin {
 	background-color: #232b2b;
 	width: 100%;
