--- a/public/css/matches-list.css
+++ b/public/css/matches-list.css
@@ -3,11 +3,11 @@
 	font-size: 18px;
 	text-align: left;
 }
-table col[class*="col-"] {
+/*table col[class*="col-"] {
 	position: static;
 	float: none;
 	display: table-column;
-}
+}*/
 .matches_list_table{
 	margin-bottom: 30px;
 }
