--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,8 @@ body {
 	margin: 0;
 	background-color: #222629;
 	color: white;
+	text-align: center;
+	margin 50px auto;
 }
 * {
     -webkit-box-sizing: border-box;
@@ -25,12 +27,12 @@ a {
 	align-items: center;
 	justify-content: center;
 }
-table {
+/*table {
     border-collapse: collapse;
 	color: #fff;
     display: table;
     border-spacing: 0;
-}
+}*/
 .clearfix:after {
 	content:'';
 	display: table;
