--- a/public/css/player_profile_style.css
+++ b/public/css/player_profile_style.css
@@ -1,7 +1,7 @@
 .player_profile_section01 {
 	display: inline-block;
 	padding-bottom: 20px;
-	margin-bottom: 40px;
+	margin: 40px 0px;
 	border-bottom: 1px solid #474B4F;
 }
 .fa-user {
@@ -17,32 +17,39 @@
 	background-color: #33373B;
 	float: left;
 	margin-bottom: 30px;
+	border-radius: 3px;
+	overflow: hidden;
 }
 .player_profile_img {
-	max-width: 300px;
-	max-height: 400px;
+	width: 100%;
+	height: auto;
+	max-height: 100%;
+	object-fit: contain;
 }
 .player_profile_personalInfo {
+	width: 500px;
+	height: 436px;
 	margin-left: 30px;
 	background-color: #33373B;
 	display: inline-block;
 	margin-bottom: 30px;
+	border-radius: 3px;
+	border-top: 3px solid #61892F;
 }
 .player_profile_personalInfo table {
 	width: 500px;
 	height: 436px;
 	border-collapse: collapse;
-	border-top: 3px solid #61892F;
 }
 .player_profile_header {
 	display: inline-block;
 	font-size: 20px;
-	font-family: 'Poiret One', cursive;
+	font-family: 'Exo 2', sans-serif;
 	color: #86C232;
 }
 .player_profile_surname {
 	text-transform: uppercase;
-	font-family: 'Poiret One', cursive;
+	font-family: 'Exo 2', sans-serif;
 	font-size: 23px;
 	color: #86C232;
 }
@@ -104,7 +111,7 @@
 	margin-left: 5px;
 }
 .circle_break {
-	font-family: 'Poiret One', cursive;
+	font-family: 'Exo 2', sans-serif;
 	text-transform: uppercase;
 }
 .little_circle {
@@ -113,7 +120,7 @@
 	height: 30px;
 	background-color: #61892F;
 	border-radius: 50%;
-	padding-top: 7px;
+	padding-top: 5px;
 	box-shadow: 2px 2px 10px 0px #33373B;
 }
 .circle_hover div:hover {
