--- a/public/css/matches-list.css
+++ b/public/css/matches-list.css
@@ -1,27 +1,35 @@
 .matches_list_table_round_num {
 	text-transform: uppercase;
-	font-size: 18px;
+	font-size: 20px;
 	text-align: left;
 }
-/*table col[class*="col-"] {
+table col[class*="col-"] {
 	position: static;
 	float: none;
 	display: table-column;
-}*/
+}
 .matches_list_table{
-	margin-bottom: 30px;
+    margin-bottom: 50px;
+    width: 700px;
+    max-width: 700px;
+    min-width: 700px;
+	border-radius: 3px;
+}
+.round_num {
+ 	width: 700px;
+ 	max-width: 700px;
 }
 table.matches_list_table .col-1 {
  	width: 5%;
 }
 table.matches_list_table .col-2 {
- 	width: 20%;
+ 	width: 30%;
 }
 table.matches_list_table .col-3 {
  	width: 30%;
 }
 table.matches_list_table .col-4 {
- 	width: 20%;
+ 	width: 30%;
 }
 table.matches_list_table .col-5 {
  	width: 5%;
@@ -35,15 +43,12 @@ table.matches_list_table .col-5 {
 .matches_list_table thead th {
 	text-transform: uppercase;
 	padding: 15px;
-	border-top: 5px solid #61892F;
+	border-top: 3px solid #61892F;
 	font-size: 12px;
-}
-.matches_list_table_thead{
-	color:#fff;
+	text-align: center;
 }
 .matches_list_table tbody tr td {
 	padding: 5px;
-
 }
 .matches_list_table_youtube img {
 	height: 20px;
@@ -79,6 +84,24 @@ table.matches_list_table .col-5 {
 	background-color: #61892F;
 	font-weight: bold;
 }
+.odd_num {
+    background-color: #567A2B;
+}
 .matches_list_table_pointer {
 	cursor: pointer;
+}
+.fa-youtube {
+    color: #FF1F1C;
+}
+.matches_list_table_youtube {
+    background-color: #4B5055;
+}
+.even_youtube {
+    background-color: #43464A;
+}
+.matches_list_table thead tr>:nth-child(2) {
+    text-align: right;
+}
+.matches_list_table thead tr>:nth-child(4) {
+    text-align: left;
 }
