--- a/public/css/group.css
+++ b/public/css/group.css
@@ -1,42 +1,48 @@
 .group {
 	display: inline-block;
-	width: 1067px;
+    width: 1067px;
     max-width: 1067px;
     height: 306px;
     max-height: 306px;
     margin-bottom: 150px;
 }
-.group-table tbody {
-    border-style: hidden;
+.round_num_div {
+    width: 1067px;
+    max-width: 1067px;
 }
-.group-number {
-    position: absolute;
-    color: #fff;
+.matches_list_table_round_num {
+    text-transform: uppercase;
+    font-size: 25px;
+    text-align: left;
+}
+.group-table thead th {
+    padding: 15px;
+    border-right: 1px solid #343A3F;
 }
 .group-table tr>* {
-    border: 1px solid #6B6E70;
     padding: 20px;
+    font-size: 15px;
 }
 .group-table {
     background-color: #474B4F;
-    margin-top: 50px;
     width: 1067px;
     max-width: 1067px;
     min-width: 1067px;
-/*TODO with sokol	border-radius: 3px; */
+    border-radius: 3px;
 }
 .group-table th {
-    border: none;
-    border-top: 3px solid #61892F;
     background-color: #222629;
     color: white;
     text-align: center;
 }
+.group-table tbody tr {
+    font-size: 15px;
+}
 .group-table tbody tr>:nth-child(1) {
-    background-color: #61892F;
+    
     color: #fff;
     font-size: 17px;
-	border-bottom: 1px solid #86C232;
+    border-bottom: none;
  }
  .group-table tbody tr>:last-child {
     border-right: none;
@@ -47,3 +53,46 @@
 .lastname-uppercase {
  	text-transform: uppercase;
  }
+
+
+/* BORDERS */
+
+.group-table tbody tr td {
+    border-right: 1px solid #71787F;
+}
+.group-table tbody tr>:nth-child(1) {
+    border-right: none;
+}
+.group-table tr>:nth-child(14) {
+    border-right: none;
+}
+
+
+/* COLOR */
+
+.group_even_num {
+    background-color: #61892F;
+}
+.group_odd_num {
+    background-color: #567A2B; 
+}
+.group_row_odd {
+    background-color: #54595E;
+}
+.group_row_even {
+    background-color: #474B4F;
+}
+
+/* RADIUS */
+
+
+.group_border_radius {
+    border-top: 3px solid #61892F;
+    border-radius: 4px;
+}
+.group_border_radius-br {
+    border-bottom-right-radius: 4px;
+}
+.group_border_radius-bl {
+    border-bottom-left-radius: 4px;
+}
