--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,10 @@
+.black_text{
+	color: black;
+}
+
+input, select, button{
+	color: black;
+}
 body {
 	font-family: 'Source Sans Pro', sans-serif;
 	padding: 0;
@@ -13,6 +20,8 @@ body {
     box-sizing: border-box;
 }
 a {
+	margin: 0px;
+	padding: 0px;
     text-decoration: none;
     color: #fff;
 }
