--- a/public/css/lobby_list_styles.css
+++ b/public/css/lobby_list_styles.css
@@ -1,23 +1,25 @@
 body {
 	font-family: 'Exo 2', sans-serif;
 }
-.list-match-lobby-table {
+.list-match-lobby{
 	display: flex;
 	flex-direction: column;
-	width: 50%;
-	max-width: 50%;
+	width: 700px;
+	max-width: 700px;
+	min-width: 700px;
 	margin-top: 40px;
+	background-color: #474B4F;
+	border-top: 3px solid #61892F;
+	border-radius: 4px;
 }
 .list-match-lobby-info {
 	padding: 12px;
-	margin-bottom: 0;
+	margin: 0;
 	background-color: #222629;
 	color: white;
 	text-transform: uppercase;
 	font-weight: normal;
-	font-size: 12px;
-	border-top: 3px solid #61892F;
-	border-radius: 4px;
+	font-size: 15px;
 }
 .list-match-lobby-frame-section tbody {
 	display: table-row-group;
@@ -25,46 +27,43 @@ body {
 .list-match-lobby-player-table {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	background-color: #474B4F;
-    border-bottom: 3px solid #61892F;
-	border-radius: 4px;
-    padding-top: 10px;
-	height: 280px;
-	max-height: 280px;
-	min-width: 100%;
+	justify-content: space-around;
+	height: 254px;
+    max-height: 254px;
+    min-height: 254px;
+    padding-top: 20px;
 }
-.list-match-lobby-player {
-	padding: 10px 20px;
-	float: left;
-	position: relative;
+.list-match-lobby-player{
 	display: block;
 	box-sizing: border-box;	
 }
 .list-match-lobby-frame-section {
+	float: left;
 	position: relative;
 	display: block;
 	box-sizing: border-box;
 	margin: 0px 20px;
-	margin-top: 50px;
+	margin-top: 30px;
 }
-.list-match-lobby-player-name {
+.list-match-lobby-player-name{
 	color: white;
 	font-size: 17px;
+	margin-bottom: 20px;
 }
-.list-match-lobby-player-img {
-	margin: 20px 0px 10px 0px;
-	width: 150px;
-	max-width: 150px;
-	max-height: 200px;
+.list-match-lobby-player-img{
+	width: 120px;
+	max-width: 120px;
+	height: auto;
+	max-height: 170px;
+	border-radius: 4px;
 }
 .list-match-lobby-frame-section tr th {
-	font-size: 11px;
+	font-size: 15px;
 	font-weight: 300;
 	background-color: #222629;
 	color: #6B6E70;
 	text-align: center;
-	padding: 1px 20px;
+	padding: 0px 20px;
 	vertical-align: middle;
 	text-transform: uppercase;
 }
