--- a/public/css/participants.css
+++ b/public/css/participants.css
@@ -1,21 +1,82 @@
-/*******************************
 
-TABLE
+/******* SEARCH FIELD *******/
 
-*******************************/
+.header_search {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 1067px;
+	max-width: 1067px;
+	padding-top: 
+}
+.participants_header {
+	width: 1067px;
+	max-width: 1067px;
+	text-transform: uppercase;
+	font-size: 22px;
+	display: flex;
+	flex-direction: column;
+	/*align-content: flex-start;*/
+	align-items: flex-start;
+}
+.players_list_search_field input {
+	padding: 10px;
+	margin-top: 25px;
+	width: 300px;
+	border: none;
+	background-color: #474B4F;
+	color: white;
+	font-size: 15px;
+	outline-style: none;
+	vertical-align: middle;
+	margin-right: 0px;
+	border-radius: 3px;
+	border-left: 3px solid #61892F;
+	float: right;
+}
+
+
+/**********   TABS  **********/
+
+.tab {
+	padding: 0px 0px 35px 0px;
+	margin: 0;
+	overflow: hidden;
+}
+.tab button {
+  background-color: inherit;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
+  padding: 0px;
+}
+i {
+	color: #54595E;
+	font-size: 25px;
+}
+.fa-th-large:hover {
+	color: #61892F;
+}
+.fa-bars:hover {
+	color: #61892F;
+}
+.tab button.active i {
+  	color: #61892F;
+}
+.tabcontent {
+	display: none;
+}
+
+
+/*******  LIST  *********/
 
 .participants_table_container {
 	margin: 0;
 	padding: 0;
 	border-radius: 3px;
 	border-top: 3px solid #61892F;	
-}
-.participants_header {
-	width: 1067px;
-	max-width: 1067px;
-	text-align: left;
-	text-transform: uppercase;
-	font-size: 22px;
 }
 table col[class*="col-"] {
 	position: static;
@@ -108,3 +169,98 @@ table.participants_table .col-6 {
 }
 
 
+/*******  BARS  *********/
+#list{
+	display:flex;
+}
+.players_u-list_item {
+	display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  width: 1067px;
+}
+.players_u-list_item li {
+	list-style: none;
+	display: inline-block;
+	margin-bottom: 20px;
+}
+.players_list_box {
+	display: none;
+	justify-content: center;
+}
+.players_list_header {
+	text-transform: uppercase;
+	font-size: 25px;
+	font-weight: 700;
+	padding: 0px 0px 20px 5px;
+	display: flex;
+}
+.players_list_box_letter {
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 40px;
+	font-weight: 700;
+	padding-right: 15px;
+	text-align: center;
+	border-right: 3px solid #61892F;
+	float: left;
+	margin-bottom: 40px;
+}
+figure {
+	margin: 0 auto;
+	min-height: 285px;
+	max-height: 285px;
+}
+.players_list_item_box {
+	max-width: 230px;
+	min-width: 230px;
+	max-height: 355px;
+	min-height: 355px;
+	margin-bottom: 40px;
+	background-color: #474B4F;
+	float: left;
+	display: inline-block;
+	border-radius: 3px;
+	transition: all 0.3s ;
+}
+.players_list_item_box:hover {
+  animation-duration: 0.25s;
+  margin-top: -10px;
+}
+.players_list_item_photo {
+	width: 100%;
+	max-height: 355px;
+	z-index: 0;
+	border-radius: 3px;
+	filter: brightness(80%);
+}
+.players_list_item_details {
+	box-shadow: 0px -3px 12px 0px #222629;
+	max-height: 80px;
+	min-height: 80px;
+	text-align: center;
+	padding: 10px 10px;
+	background-color: #474B4F;
+	border-top: 3px solid #61892F;
+	border-radius: 3px;
+	position: absolute;
+	width: 230px;
+	position: relative;
+}
+.players_list_item_name {
+	font-size: 15px;
+	margin: 5px 0px;
+	font-weight: 300;
+	color: #fff;
+}
+.surname {
+	text-transform: uppercase;
+}
+.players_list_item_location {
+	font-size: 12px;
+	margin: 0;
+	color: #969A9E;
+}
