--- a/public/css/bracket.css
+++ b/public/css/bracket.css
@@ -3,11 +3,11 @@
 	display: flex;
 	flex-direction: row;
 	list-style-type: none;
-	justify-content: center;
 	font-family: 'Source Sans Pro', sans-serif;
 	padding: 0;
 	margin: 0;
 	color: white;
+	overflow: scroll;
 }
 .bracket_column {
 	display: flex;
