--- a/public/css/participants.css
+++ b/public/css/participants.css
@@ -127,6 +127,8 @@ table.participants_table .col-6 {
 	text-align: center;
 	border-right: 1px solid #71787F;
 	font-size: 15px;
+	height: 50px;
+	max-height: 50px;
 }
 .participants_table tbody tr>:nth-child(1) {
 	border-right: none;
