--- a/public/css/tournament_list.css
+++ b/public/css/tournament_list.css
@@ -1,17 +1,27 @@
-.breaks_header {
+.calendar_header {
 	width: 1067px;
 	max-width: 1067px;
 }
-.breaks_sign {
+.calendar_sign {
 	text-transform: uppercase;
 	font-size: 22px;
 	text-align: left;	
 }
-
+.header_icon {
+	float: left;
+	margin-top: 3px;
+	width: 20px;
+	height: 20px;
+}
+.thead_icon {
+	margin-right: 3px;
+	width: 12px;
+	height: 12px;
+}
 /*******  LIST  *********/
 
-.breaks_table_container {
-	margin: 0;
+.calendar_table_container {
+	margin-bottom: 50px;
 	padding: 0;
 	border-radius: 3px;
 	border-top: 3px solid #61892F;	
@@ -21,29 +31,26 @@ table col[class*="col-"] {
 	float: none;
 	display: table-column;
 }
-.breaks_table {
+.calendar_table {
 	width: 1067px;
 	max-width: 1067px;
 	min-width: 1067px;
 	margin: 0;
 	padding: 0;
 }
-table.breaks_table .col-1 {
- 	width: 3%;
+table.calendar_table .col-1 {
+ 	width: 1%;
 }
-table.breaks_table .col-2 {
- 	width: 20%;
+table.calendar_table .col-2 {
+ 	width: 30%;
 }
-table.breaks_table .col-3 {
- 	width: 10%;
+table.calendar_table .col-3 {
+ 	width: 15%;
 }
-table.breaks_table .col-4 {
- 	width: 10%;
+table.calendar_table .col-4 {
+ 	width: 15%;
 }
-table.breaks_table .col-5 {
- 	width: 19%;
-}
-.breaks_table thead th {
+.calendar_table thead th {
 	text-transform: uppercase;
 	padding: 15px;
 	font-size: 13px;
@@ -51,13 +58,13 @@ table.breaks_table .col-5 {
 	vertical-align: middle;
 	border-right: 1px solid #343A3F;
 }
-.breaks_table tr>:nth-child(5) {
+.calendar_table tr>:nth-child(4) {
 	border-right: none;
 }
-.breaks_table_thead {
+.calendar_table_thead {
 	color: #fff;
 }
-.breaks_table tbody tr td {
+.calendar_table tbody tr td {
 	padding: 10px;
 	text-align: center;
 	border-right: 1px solid #71787F;
@@ -65,14 +72,8 @@ table.breaks_table .col-5 {
 	height: 50px;
 	max-height: 50px;
 }
-.breaks_table tbody tr>:nth-child(1) {
+.calendar_table tbody tr>:nth-child(1) {
 	border-right: none;
-}
-.breaks_table_name {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	margin-left: 10px;
 }
 .circle_img {
 	border-radius: 100px;
@@ -81,13 +82,13 @@ table.breaks_table .col-5 {
 	object-fit: cover;
 	margin-right: 10px;
 }
-.breaks_table_tbody_odd {
+.calendar_table_tbody_odd {
 	background-color: #54595E;
 }
-.breaks_table_tbody_even {
+.calendar_table_tbody_even {
 	background-color: #474B4F;
 }
-.breaks_table_points {
+.calendar_table_points {
 	background-color: #61892F;
 	font-weight: bold;
 	text-align: center;
@@ -95,7 +96,7 @@ table.breaks_table .col-5 {
 .odd_num {
 	background-color: #567A2B; 
 }
-.breaks_table_pointer {
+.calendar_table_pointer {
 	cursor: pointer;
 }
 
