image crop and photo upload styles

--- a/public/css/live_match_lobby.css
+++ b/public/css/live_match_lobby.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-	font-family: 'Open Sans', Arial, sans-serif;
+	/*font-family: 'Open Sans', Arial, sans-serif;*/
 	background-color: #014027;
 }
 .live-match-lobby {
