--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ input, select, button{
 	color: black;
 }
 body {
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Exo 2', sans-serif;
 	padding: 0;
 	margin: 0;
 	background-color: #222629;
