--- a/public/css/matches-list.css
+++ b/public/css/matches-list.css
@@ -73,23 +73,13 @@ table.matches_list_table .col-6 {
 	font-size: 15px;
 	vertical-align: middle;
 }
-.matches_list_table_tbody_odd {
-	background-color: #54595E;
-}
-.matches_list_table_tbody_even {
-	background-color: #474B4F;
-}
 .matches_list_table_number {
-	background-color: #61892F;
 	font-weight: bold;
-}
-.odd_num {
-    background-color: #567A2B;
 }
 .fa-youtube {
     color: #FF1F1C;
 }
-.matches_list_table_youtube {
+.odd_youtube {
     background-color: #4B5055;
 }
 .even_youtube {
