--- a/public/css/group.css
+++ b/public/css/group.css
@@ -58,7 +58,10 @@
     object-fit: cover;
     margin-right: 10px;
 }
-
+.groups_table_number {
+    font-weight: bold;
+    text-align: center;
+}
 
 /* BORDERS */
 
