--- a/public/css/available_tables.css
+++ b/public/css/available_tables.css
@@ -69,7 +69,7 @@
 	background-position: center;
 	opacity: 0.2;
 	filter: blur(2px);
-    background-image: url(/~levko/img/player/dan.jpg);/*url(img/snooker_table.svg);*/
+    background-image: url(/~levko/img/snooker_table.svg);
 }
 .boxFor_plName {
 	display: flex;
@@ -140,7 +140,7 @@
 	background-position: center;
 	opacity: 0.7;
 	/*filter: blur(4px);*/
-    background-image: url(/~levko/img/player/dan.jpg);/*url(img/snooker_table.svg);*/
+    background-image: url(/~levko/img/snooker_table.svg);
 	display: flex;
 	align-items: center;
 	justify-content: center;
