--- a/public/css/lobby_list_styles.css
+++ b/public/css/lobby_list_styles.css
@@ -1,6 +1,5 @@
 .list-match-lobby{
-	display: flex;
-	flex-direction: column;
+	display: inline-block;
 	width: 700px;
 	max-width: 700px;
 	min-width: 700px;
@@ -55,7 +54,7 @@
 	border-radius: 4px;
 }
 .list-match-lobby-frame-section tr th {
-	font-size: 15px;
+	font-size: 17px;
 	font-weight: 300;
 	background-color: #222629;
 	color: #6B6E70;
@@ -73,7 +72,7 @@
 	vertical-align: middle;
 }
 .list-match-lobby-frame-section table tr.list-match-lobby-frame-details td {
-	font-size: 10px;
+	font-size: 12px;
 	background-color: #474B4F;
 	color: #fff;
 	text-align: center;
