--- a/public/css/match_lobby_style.css
+++ b/public/css/match_lobby_style.css
@@ -1,12 +1,20 @@
+.match_lobby_header {
+	margin-top: 50px;
+    width: 700px;
+    max-width: 700px;
+}
+.match_lobby_sign {
+    text-transform: uppercase;
+    font-size: 22px;
+    text-align: left;
+}
 .match_lobby {
 	display: inline-block;
 	max-width: 700px;
 	min-width: 700px;
-	margin-top: 40px;
 	background-color: #474B4F;
 	border-top: 3px solid #61892F;
 	border-radius: 8px;
-	margin-bottom: 0px;
 }
 .match_lobby_info {
 	padding: 12px;
@@ -29,8 +37,7 @@
     min-height: 254px;
     padding-top: 20px;
 }
-.match_lobby_player01,
-.match_lobby_player02 {
+.match_lobby_player {
 	display: block;
 	box-sizing: border-box;	
 }
@@ -42,21 +49,13 @@
 	padding: 0px 20px;
 	margin-top: 60px;
 }
-.match_lobby_player01-name,
-.match_lobby_player02-name {
+.match_lobby_player-name {
 	color: white;
 	font-size: 17px;
 	margin-bottom: 20px;
 
 }
-.match_lobby_player01-name {
-    float: left;
-}
-.match_lobby_player02-name {
-    float: right;
-}
-.match_lobby_player01-img,
-.match_lobby_player02-img {
+.match_lobby_player-img {
 	width: 120px;
 	max-width: 120px;
 	height: auto;
@@ -70,6 +69,7 @@
 	color: #6B6E70;
 	text-align: center;
 	padding: 0px 20px;
+	vertical-align: middle;
 	text-transform: uppercase;
 }
 .match_lobby_frame-section tr td {
@@ -95,23 +95,40 @@
 
 /*********** TABLE ***********/
 
-.match_lobby_framesBreaksPoits_table {
+.match_lobby_table_container {
 	display: inline-block;
 	color: #fff;
+
+	width: 700px;
 	max-width: 700px;
-	min-width: 700px;
 	border-radius: 4px;
 }
 .match_lobby_table {
-	margin-bottom: 30px;
 	width: 700px;
 	max-width: 700px;
-	min-width: 700px;
+	margin-bottom: 30px;
+}
+table.match_lobby_table .col-1 {
+	width: 21%;
+}
+table.match_lobby_table .col-2 {
+	width: 24%;
+}
+table.match_lobby_table .col-3 {
+	width: 10%;
+}
+table.match_lobby_table .col-4 {
+	width: 24%;
+}
+table.match_lobby_table .col-5 {
+	width: 21%;
 }
 .match_lobby_table thead th {
 	text-transform: uppercase;
-	padding: 15px;
+	padding: 15px 0 15px 0;
 	font-size: 13px;
+	text-align: center;
+	vertical-align: middle;
 	border-right: 1px solid #343A3F;
 }
 .match_lobby_table thead tr>:last-child {
@@ -130,15 +147,9 @@
     font-size: 17px;
 }
 .match_lobby_table_tbody tr>:nth-child(2),
+.match_lobby_table_tbody tr>:nth-child(3),
 .match_lobby_table_tbody tr>:nth-child(4) {
     font-weight: bold;
     font-size: 19px;
-}
-.match_lobby_table_number {
-	font-weight: bold;
-	max-width: 20px;
-}
-.match_lobby_table tr>:nth-child(3) {
-	max-width: 20px;
 }
 
