fix border top in match lobby

--- a/public/css/lobby_list_styles.css
+++ b/public/css/lobby_list_styles.css
@@ -2,10 +2,8 @@
 	display: inline-block;
 	width: 700px;
 	max-width: 700px;
-	min-width: 700px;
 	margin-top: 40px;
 	background-color: #474B4F;
-	border-top: 3px solid #61892F;
 	border-radius: 8px;
 }
 .list-match-lobby-info {
@@ -16,6 +14,9 @@
 	text-transform: uppercase;
 	font-weight: normal;
 	font-size: 15px;
+	border-top: 3px solid #61892F;
+	border-top-right-radius: 8px;
+	border-top-left-radius: 8px;
 }
 .list-match-lobby-frame-section tbody {
 	display: table-row-group;
