--- a/public/css/live_match_lobby.css
+++ b/public/css/live_match_lobby.css
@@ -1,3 +1,8 @@
+body {
+    text-align: center;
+	font-family: 'Exo 2', sans-serif;
+	background-color: #014027;
+}
 .live-match-lobby {
 	display: inline-block;
 	margin: 20px;
