change imagePreview id name

--- a/public/css/img_upload.css
+++ b/public/css/img_upload.css
@@ -33,3 +33,10 @@
 	background-repeat: no-repeat;
 	background-position: center;
 }
+#playerImg_preview {
+	background-image: url(http://localhost/~levko/img/player/default.png);
+}
+#clubImg_preview {
+	background-image: url(http://localhost/~levko/img/player/default.png);
+}
+
