--- a/public/css/available_tables.css
+++ b/public/css/available_tables.css
@@ -14,11 +14,19 @@
 .club_tables_header {
     width: 1080px;
     max-width: 1080px;
+	vertical-align: bottom;
 }
 .club_tables_sign {
     text-transform: uppercase;
-    font-size: 22px;
+    font-size: 25px;
     text-align: left;
+}
+.circle_img_clb {
+	border-radius: 100px;
+	width: 70px;
+	height: 70px;
+	object-fit: cover;
+	margin: 10px;
 }
 
 .stable_containers {
