change header_search -> player_search

--- a/public/css/participants.css
+++ b/public/css/participants.css
@@ -1,7 +1,7 @@
 
 /******* SEARCH FIELD *******/
 
-.header_search {
+.player_search {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
