--- a/public/css/player_profile.css
+++ b/public/css/player_profile.css
@@ -1,7 +1,13 @@
+.player_profile_container {
+	width: 1080px;
+	max-width: 1080px;
+	margin: 0 auto;
+}
 .player_profile_section01 {
-	display: inline-block;
+	display: flex;
+	justify-content: space-around;
 	padding-bottom: 20px;
-	margin: 40px 0px;
+	margin: 40px 0 20px 0px;
 	border-bottom: 1px solid #474B4F;
 }
 .fa-user {
@@ -11,14 +17,14 @@
 	color: #86C232;
 }
 .player_profile_photo {
-	display: inline-block;
-	width: 380px;
-	height: 436px;
+	width: 300px;
+	height: 336px;
 	background-color: #33373B;
 	float: left;
-	margin-bottom: 30px;
 	border-radius: 8px;
 	overflow: hidden;
+	box-shadow: 0px 5px 10px #131617;
+	border-top: 3px solid #61892F;
 }
 .player_profile_img {
 	width: 100%;
@@ -27,19 +33,26 @@
 	object-fit: contain;
 }
 .player_profile_personalInfo {
-	width: 500px;
-	height: 436px;
-	margin-left: 30px;
+	width: 650px;
+	height: 336px;
 	background-color: #33373B;
-	display: inline-block;
 	margin-bottom: 30px;
 	border-radius: 8px;
-	border-top: 3px solid #61892F;
+	box-shadow: 0px 5px 10px #131617;
 }
 .player_profile_personalInfo table {
-	width: 500px;
-	height: 436px;
+	width: 650px;
+	height: 336px;
 	border-collapse: collapse;
+}
+.player_profile_playerName {
+    border-top: 3px solid #61892F;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    height: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .player_profile_header {
 	display: inline-block;
@@ -55,9 +68,9 @@
 	color: #7D8082;
 	text-transform: uppercase;
 	font-size: 12px;
-	padding: 10px;
+	padding: 0 10px 10px 10px;
 }
-.player_profile_tabelMean {
+.player_profile_tableMean {
 	color: #fff;
 	font-size: 20px;
 }
@@ -69,11 +82,12 @@
 	background-color: #61892F;
 }
 .player_profile_personalInfo table th {
-	background-color: #474B4F;
-	height: 100px;
+	background-color: #222629;
+	height: 70px;
 }
 .player_profile_personalInfo table td {
 	width: 250px;
+	height: 133px;
 }
 .player_profile_personalInfo table tr:last-child td {
 	border-top: 1px solid #474B4F;
@@ -96,6 +110,8 @@
 	background-color: #33373B;
 	text-align: center;
 	position: relative;
+	transition: 0.5s;
+	box-shadow: 0px 3px 10px #131617;
 }
 .fa-trophy,
 .fa-user-friends {
@@ -110,11 +126,11 @@
 }
 .little_circle {
 	position: absolute;
-	width: 30px;
-	height: 30px;
+	width: 35px;
+	height: 35px;
 	background-color: #61892F;
 	border-radius: 50%;
-	padding-top: 5px;
+	padding-top: 7px;
 	box-shadow: 2px 2px 10px 0px #33373B;
 }
 .player_profile_circle:hover {
