--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,3 +79,16 @@ table col[class*="col-"] {
 .bold {
 	font-weight: bold;
 }
+
+.section_header {
+	width: 1080px;
+	max-width: 1080px;
+	margin: 0 auto;
+}
+.header_sign {
+	text-transform: uppercase;
+	font-size: 22px;
+	text-align: left;
+	margin: 20px auto;
+	font-weight: bold;
+}
