--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,6 +84,8 @@ table col[class*="col-"] {
 	width: 1080px;
 	max-width: 1080px;
 	margin: 0 auto;
+	/*display: flex;
+	*/height: 70px;
 }
 .header_sign {
 	text-transform: uppercase;
