--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,6 +87,12 @@ table col[class*="col-"] {
 	/*display: flex;
 	*/height: 70px;
 }
+.section_header_700 {
+	width: 700px;
+	max-width: 700px;
+	margin: 0 auto;
+	height: 70px;
+}
 .header_sign {
 	text-transform: uppercase;
 	font-size: 22px;
