--- a/public/css/match_list.css
+++ b/public/css/match_list.css
@@ -1,14 +1,7 @@
-.matches_list_table_container {
-    margin: 0;
-    padding: 0;
-    border-radius: 8px;
-    border-top: 3px solid #61892F;
-}
 .matches_list_table{
-    margin-bottom: 30px;
     width: 1080px;
     max-width: 1080px;
-    min-width: 1080px;
+	margin: 0 auto;
 }
 table.matches_list_table .col-1 {
  	width: 1%;
@@ -43,9 +36,6 @@ table.matches_list_table .col-9 {
 	font-size: 13px;
 	text-align: center;
 	vertical-align: middle;
-}
-.matches_list_table_thead{
-	color: #fff;
 }
 .matches_list_table tbody tr td {
 	padding: 10px;
