--- a/public/css/participants.css
+++ b/public/css/participants.css
@@ -66,18 +66,11 @@ i {
 
 /*******  LIST  *********/
 
-.participants_table_container {
-	margin: 0;
-	padding: 0;
-	border-radius: 8px;
-	border-top: 3px solid #61892F;	
-}
 .participants_table {
 	width: 1080px;
 	max-width: 1080px;
 	min-width: 1080px;
-	margin: 0;
-	padding: 0;
+	margin: 0 auto;
 }
 table.participants_table .col-1 {
  	width: 3%;
@@ -107,9 +100,6 @@ table.participants_table .col-6 {
 }
 .participants_table tr>:nth-child(6) {
 	border-right: none;
-}
-.participants_table_thead {
-	color: #fff;
 }
 .participants_table tbody tr td {
 	padding: 10px;
