--- a/public/css/results.css
+++ b/public/css/results.css
@@ -1,17 +1,10 @@
 /*******  LIST  *********/
 
-.results_table_container {
-	margin: 0;
-	padding: 0;
-	border-radius: 8px;
-	border-top: 3px solid #61892F;	
-}
 .results_table {
 	width: 1080px;
 	max-width: 1080px;
 	min-width: 1080px;
-	margin: 0;
-	padding: 0;
+	margin: 0 auto;
 }
 table.results_table .col-1 {
  	width: 1%;
@@ -36,14 +29,9 @@ table.results_table .col-5 {
 	vertical-align: middle;
 	border-right: 1px solid #343A3F;
 }
-.results_table tr>:nth-child(5) {
-	border-right: none;
-}
+.results_table tr>:nth-child(5),
 .results_table tbody tr>:nth-child(1) {
 	border-right: none;
-}
-.results_table_thead {
-	color: #fff;
 }
 .results_table tbody tr td {
 	padding: 10px;
