--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+.margin-b_30{
+	margin-bottom: 30px !important;
+}
 .black_text{
 	color: black;
 }
@@ -96,4 +99,11 @@ table col[class*="col-"] {
 	text-align: left;
 	margin: 20px auto;
 	font-weight: bold;
+}
+
+.list_container {
+    margin: 0;
+    padding: 0;
+    border-radius: 8px;
+    border-top: 3px solid #61892F;
 }
