--- a/public/css/tournament_list.css
+++ b/public/css/tournament_list.css
@@ -11,18 +11,11 @@
 }
 /*******  LIST  *********/
 
-.calendar_table_container {
-	margin-bottom: 30px;
-	padding: 0;
-	border-radius: 8px;
-	border-top: 3px solid #61892F;	
-}
 .calendar_table {
 	width: 1080px;
 	max-width: 1080px;
 	min-width: 1080px;
-	margin: 0;
-	padding: 0;
+	margin: 0 auto;
 }
 table.calendar_table .col-1 {
  	width: 1%;
@@ -46,9 +39,6 @@ table.calendar_table .col-4 {
 }
 .calendar_table tr>:nth-child(4) {
 	border-right: none;
-}
-.calendar_table_thead {
-	color: #fff;
 }
 .calendar_table tbody tr td {
 	padding: 10px;
