optimize headers includes

--- a/public/css/img_upload.css
+++ b/public/css/img_upload.css
@@ -37,6 +37,6 @@
 	background-image: url(http://localhost/~levko/img/player/default.png);
 }
 #clubImg_preview {
-	background-image: url(http://localhost/~levko/img/player/default.png);
+	background-image: url(http://localhost/~levko/img/club/default.png);
 }
 
