--- a/public/css/register_form.css
+++ b/public/css/register_form.css
@@ -76,7 +76,7 @@ form .margin_b40px {
 	justify-content: space-around;
 	margin-top: 20px;
 }
-.birthday_format {
+.date_format {
     font-size: 12px;
     font-style: italic;
     color: #565C65;
