--- a/public/css/admin_panel.css
+++ b/public/css/admin_panel.css
@@ -39,8 +39,6 @@
     width: 1080px;
 }
 
-/*TOURNAMENT BUTTON*/
-
 .button_tour button,
 .button_player button,
 .button_club button,
@@ -65,5 +63,50 @@
 .buttons button:hover {
     background-color: #4D6D26;
     cursor: pointer;
+}
+
+/* SECTION 02 */
+
+.admin_section02 {
+    display: inline-block;
+}
+.admin_circle {
+    float: left;
+    margin: 20px 60px;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: #33373B;
+    text-align: center;
+    position: relative;
+    transition: 0.5s;
+    box-shadow: 0px 3px 10px #131617;
+}
+.admin_circle .fa-trophy,
+.admin_circle .fa-shield-alt {
+    font-size: 33px;
+    margin-top: 32px;
+    margin-bottom: 10px;
+    text-align: center;
+	color: white;
+}
+.little_circle {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    background-color: #61892F;
+    border-radius: 50%;
+    padding-top: 7px;
+    box-shadow: 2px 2px 10px 0px #33373B;
+}
+.admin_circle:hover {
+    background-color: #61892F;
+    cursor: pointer;
+}
+.admin_active {
+    background-color: #61892F;
+}
+.details_anchor {
+    display: none;
 }
 
