--- a/public/css/available_tables.css
+++ b/public/css/available_tables.css
@@ -19,6 +19,10 @@
 	margin-bottom: 10px;
 }
 
+.header_border{
+    border-radius: 4px;
+    border-bottom: 3px solid #61892F;
+}
 .stable_containers {
 	width: 520px;
 	margin: 50px 0px;
